--- a/kbnsf/kbnsf.vcxproj
+++ b/kbnsf/kbnsf.vcxproj
@@ -111,7 +111,7 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>../xgm;../nsfplug_ui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../ini;../nsfplug;../xgm;../nsfplug_ui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;KBNSF_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <MinimalRebuild>false</MinimalRebuild>
@@ -135,7 +135,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalOptions>/MACHINE:I386 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>shlwapi.lib;odbc32.lib;odbccp32.lib;$(OutDir)vcm.lib;$(OutDir)xgm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>shlwapi.lib;odbc32.lib;odbccp32.lib;$(OutDir)vcm.lib;$(OutDir)xgm.lib;$(OutDir)ini.lib;$(OutDir)nsfplug.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(ProjectName).dll</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <ModuleDefinitionFile>.\in_nsf.def</ModuleDefinitionFile>
@@ -156,6 +156,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="in_nsf.h" />
+    <ClInclude Include="kbmedia\plugin.h" />
+    <ClInclude Include="kbmedia\sdk\kmp_pi.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
